--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.j256.ormlite</groupId>
+			<artifactId>ormlite-jdbc</artifactId>
+			<version>3.4</version>
+		</dependency>
 
 	</dependencies>
 </project>
