--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ src/main/java/crest/jira/data/rest/JiraRestClient.java
 *.class
 target/classes/META-INF/MANIFEST.MF
 target/classes/META-INF/maven/jira-data-retriever/jira-agile-java-client/pom.xml
+/target/
